Fixed styles for mobile Added readable duration time of track Added track image Fixed visual selecting of track

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
 body {
-    margin: 0;
     font-family: monospace;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-size: 18px;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 code {
@@ -17,19 +20,14 @@ html {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 button {
     background: none;
     border: none;
     cursor: pointer;
-}
-
-#root {
-    display: flex;
-    position: absolute;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
 }
