--- a/src/styles.css
+++ b/src/styles.css
@@ -1,23 +1,21 @@
-.container {
+#root {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: stretch;
-    align-items: center;
-    padding: 3rem;
-    margin-left: auto;
-    margin-right: auto;
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: stretch;
 }
 
 .card {
-    width: 100%;
-    min-width: 300px;
-    max-width: 400px;
-    height: 100%;
-    min-height: 600px;
-    padding: 2rem;
+    flex: 1;
     display: flex;
+    padding: 5vw;
+    margin: 3vw;
     flex-direction: column;
     justify-content: space-between;
+    gap: 1vh;
     align-items: center;
     backdrop-filter: blur(6px) saturate(159%);
     -webkit-backdrop-filter: blur(6px) saturate(159%);
@@ -35,21 +33,21 @@
 }
 
 .icons {
-    width: 3rem;
-    height: 3rem;
+    width: 40px;
+    height: 40px;
     color: #404f5c;
     fill: #1D1E20;
 }
 
 .btnGroup {
-    min-width: 200px;
+    /*min-width: 150px;*/
     max-width: 300px;
     width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem 0;
+    padding: 10px 0;
 }
 
 .trackList {
@@ -63,29 +61,44 @@
     padding: 0;
     margin: 0;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .track {
-    margin-bottom: 0.5rem;
+    margin-bottom: 10px;
     padding-left: 22px;
     cursor: pointer;
     text-overflow: ellipsis;
     overflow: hidden;
-    min-width: 280px;
-    width: 100%;
-    height: 1.2em;
+    /*min-width: 50vw;*/
+    /*width: 65vw;*/
+    /*height: 5vw;*/
     white-space: nowrap;
     color: #404f5c;
 }
 
 .selectedSong {
     font-weight: bold;
-    padding-left: 0;
+}
+
+.selectedSong::before {
+    position: absolute;
+    content: ">";
+    left: 6%;
+}
+
+.trackImg {
+    max-width: 150px;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 10px;
+    border-radius: 8px;
+    content:url(./images/autumn.jpg);
 }
 
 .progress {
     width: 100%;
-    margin-bottom: 1rem;
+    margin-bottom: 20px;
     height: 5px;
     -webkit-appearance: none;
     border-radius: 8px;
